--- a/3516464.ipynb
+++ b/3516464.ipynb
@@ -847,7 +847,7 @@
     "- 兴趣方向：计算机视觉，学习视觉SLAM与深度学习结合ing\n",
     "- 个人主页：\n",
     "\t- [GitHub](https://github.com/NEKOAKIKI)\n",
-    "   - [Gitee](https://gitee.com/nekoakiki)\n",
+    "\t- [Gitee](https://gitee.com/nekoakiki)\n",
     "\t- [飞桨AI Studio](https://aistudio.baidu.com/aistudio/personalcenter/thirdview/771061)"
    ]
   }
