--- a/3516464.ipynb
+++ b/3516464.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "#### **模型准备**\n",
     "在使用EIseg前，请先下载模型参数。EISeg开放了在COCO+LVIS和大规模人像数据上训练的四个标注模型，满足通用场景和人像场景的标注需求。其中模型结构对应EISeg交互工具中的网络选择模块，用户需要根据自己的场景需求选择不同的网络结构和加载参数。  \n",
-    "本项目选用的是\n",
+    "本项目选用的是[hrnet18_ocr64_cocolvis](https://bj.bcebos.com/paddleseg/dygraph/interactive_segmentation/ritm/hrnet18_ocr64_cocolvis.pdparams)模型。\n",
     "| 模型类型 | 适用场景 | 模型结构 | 下载地址|\n",
     "| --- | --- | --- | ---|\n",
     "| **高精度模型**  | **适用于通用场景的图像标注。** | **HRNet18_OCR64** | **[hrnet18_ocr64_cocolvis](https://bj.bcebos.com/paddleseg/dygraph/interactive_segmentation/ritm/hrnet18_ocr64_cocolvis.pdparams)** |\n",
@@ -197,7 +197,7 @@
     "\n",
     "   在使用中可以将`自动保存`设置上，设定好文件夹即可，这样在使用时切换图像会自动将完成标注的图像进行保存。\n",
     "\n",
-    "当设置完成后即可开始进行标注，默认情况下常用的按键/快捷键如下，如需修改可按`E`弹出快捷键修改。"
+    "当设置完成后即可开始进行标注。\n"
    ]
   },
   {
@@ -207,6 +207,15 @@
    },
    "source": [
     "### 4. 构造数据集"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "#### **将训练集的图像集和标签路径写入datas中**"
    ]
   },
   {
@@ -263,7 +272,7 @@
     "\r\n",
     "random.shuffle(datas)\r\n",
     "\r\n",
-    "# 打印datas的长度和具体存储例子\r\n",
+    "# 打印datas的长度和抽样可视化\r\n",
     "print('total:', len(datas))\r\n",
     "print(datas[0][0])\r\n",
     "print(datas[0][1])\r\n",
@@ -276,61 +285,6 @@
     "    plt.imshow(cv2.imread(datas[10][i])[:, :, ::-1])\r\n",
     "    \r\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "#### **将训练集的图像集和标签路径写入datas中**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total: 66652\n",
-      "data/data77571/img_train/T127206.jpg\n",
-      "data/data77571/lab_train/T127206.png\n",
-      "('data/data77571/img_train/T047668.jpg', 'data/data77571/lab_train/T047668.png')\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\r\n",
-    "import os\r\n",
-    "\r\n",
-    "datas = []\r\n",
-    "image_base = 'data/data77571/img_train'   # 训练集原图路径\r\n",
-    "annos_base = 'data/data77571/lab_train'   # 训练集标签路径\r\n",
-    "\r\n",
-    "# 读取原图文件名\r\n",
-    "ids_ = [v.split('.')[0] for v in os.listdir(image_base)]\r\n",
-    "\r\n",
-    "# 将训练集的图像集和标签路径写入datas中\r\n",
-    "for id_ in ids_:\r\n",
-    "    img_pt0 = os.path.join(image_base, '{}.jpg'.format(id_))\r\n",
-    "    img_pt1 = os.path.join(annos_base, '{}.png'.format(id_))\r\n",
-    "    datas.append((img_pt0.replace('/home/aistudio', ''), img_pt1.replace('/home/aistudio', '')))\r\n",
-    "    if os.path.exists(img_pt0) and os.path.exists(img_pt1):\r\n",
-    "        pass\r\n",
-    "    else:\r\n",
-    "        raise \"path invalid!\"\r\n",
-    "\r\n",
-    "# 打印datas的长度和具体存储例子\r\n",
-    "print('total:', len(datas))\r\n",
-    "print(datas[0][0])\r\n",
-    "print(datas[0][1])\r\n",
-    "print(datas[10][:])"
    ]
   },
   {
@@ -847,7 +801,7 @@
     "- 兴趣方向：计算机视觉，学习视觉SLAM与深度学习结合ing\n",
     "- 个人主页：\n",
     "\t- [GitHub](https://github.com/NEKOAKIKI)\n",
-    "\t- [Gitee](https://gitee.com/nekoakiki)\n",
+    "   - [Gitee](https://gitee.com/nekoakiki)\n",
     "\t- [飞桨AI Studio](https://aistudio.baidu.com/aistudio/personalcenter/thirdview/771061)"
    ]
   }
